[package]
name = "quinn-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
quinn = "0.11.6"
rcgen = "0.13.2"
rustls ="0.23.23"
rustls-pemfile = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"
